updated some text in user portal

--- a/views/userPortal.ejs
+++ b/views/userPortal.ejs
@@ -54,9 +54,8 @@
                     </svg>
                 </div>
                 
-                <p class="user-actions-paragraph">Lorem ipsum dolor sit amet consectetur adipisicing elit. 
-                    Assumenda omnis iste praesentium ducimus quos eum aliquam ipsa laudantium unde, 
-                    voluptatem, voluptatum culpa tempore ab dolores ullam repellendus labore debitis vitae.
+                <p class="user-actions-paragraph">View a detailed summary of your current and past 
+                    reservations, including pickup deadlines, return dates, and overdue status.
                 </p>
                 <a href="/userReservationDetails" class="btn">View Reservation Details</a>
             </div>
@@ -68,9 +67,9 @@
                     </svg>
                 </div>
                 
-                <p class="user-actions-paragraph">Lorem ipsum dolor sit amet consectetur adipisicing elit. 
-                    Assumenda omnis iste praesentium ducimus quos eum aliquam ipsa laudantium unde, 
-                    voluptatem, voluptatum culpa tempore ab dolores ullam repellendus labore debitis vitae.
+                <p class="user-actions-paragraph"> Check if any penalties have been applied to
+                     your account due to overdue or unreturned books. This includes fines,
+                    reservation restrictions, or account deactivation periods. 
                 </p>
                 <a href="/userPunishmentDetails" class="btn">Punishments (if any)</a>
             </div>
