removing console logs

--- a/views/adminPortal.ejs
+++ b/views/adminPortal.ejs
@@ -130,7 +130,7 @@
     <script>
         setTimeout(() => {
         const flash = document.getElementsByClassName("flash-messages-login-register")[0];
-        console.log(flash); 
+        //console.log(flash); 
         if (flash) {
           flash.style.transition = "opacity 0.5s ease";
           flash.style.opacity = "0";
