--- a/views/home.ejs
+++ b/views/home.ejs
@@ -47,6 +47,6 @@
     <!-- About Us Section -->
     <%- include('includes/aboutUs') %>
 
-    <%-include('includes/homefooter') %>
-    
+    <!-- <%-include('includes/homefooter') %>
+     -->
     <%- include('includes/footer') %>
