fix: made a typo in referencing a css file

--- a/views/loginCustomer.ejs
+++ b/views/loginCustomer.ejs
@@ -7,7 +7,7 @@
     <title>Login Customer Page</title>
     <%- include('includes/commonCss')%>
     <link rel="stylesheet" href="logincustomer.css">
-    <link rel="stylesheet" href="flashmessagesFrontEnd.css">
+    <link rel="stylesheet" href="flashMessagesFrontEnd.css">
 </head>
 
 <body>
