--- a/views/registerCustomer.ejs
+++ b/views/registerCustomer.ejs
@@ -43,6 +43,10 @@
             <div class="form-group">
                 <input type="submit" value="Register">
             </div>
+
+            <div class="form-group">
+                <a href="/" class="home-link">Go back to Home Page</a>
+            </div>
         </form>
     </div>
 
